[package]
name = "decay"
version = "0.1.0"
edition = "2021"
description = "A general educational scientific toy/tool base for simulations; specifically focused on molecular or brownian dynamics, it also includes a visualizer and a react app."
license-file = "LICENSE"
repository = "https://www.github.com/astatide/decay"

# this adds support for WASM and wgpu and compiling down to something a browser can run
[lib]
crate-type = ["cdylib", "rlib"]

# this is a fix for compiling on an M1 Mac
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.5"
getrandom = { version = "0.2", features = ["js"] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
cfg-if = "1"
pollster = "0.3.0" # awaiting the future; simple
bytemuck = { version = "1.13.1", features = [ "derive" ] }
cgmath = "0.18" # linear algebra baby!  For graphics mostly.
nalgebra = "*" # non computer graphics linear algebra
rand = "0.8.5"
num = "0.4.0"
# the other regular dependencies...
decay_si = { path = "crates/decay_si" }
decay_si_derive = { path = "crates/decay_si_derive" }
decay_forge = { path = "crates/decay_forge" }
Legion = { path = "crates/Legion" }

[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]    # <--- Uncomment if you wish to use `Float` and `Real` without `std`

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "0.15", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.36"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "MouseEvent",
    "KeyboardEvent",
    'CssStyleDeclaration',
    'EventTarget',
    'HtmlCanvasElement',
    'HtmlElement',
    'MouseEvent',
    'Node',
]}

[dependencies.uuid]
version = "1.3.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
