[package]
name = "Legion"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.28.5"
getrandom = { version = "0.2", features = ["js"] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
cfg-if = "1"
pollster = "0.3.0" # awaiting the future; simple
bytemuck = { version = "1.13.1", features = [ "derive" ] }
cgmath = "0.18" # linear algebra baby!  For graphics mostly.
nalgebra = "*" # non computer graphics linear algebra
rand = "0.8.5"
num = "0.4.0"
# the other regular dependencies...
decay_si = { path = "../decay_si" }
decay_si_derive = { path = "../decay_si_derive" }
decay_forge = { path = "../decay_forge" }

[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]    # <--- Uncomment if you wish to use `Float` and `Real` without `std`

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
